--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jordansamhi</groupId>
-    <artifactId>utils</artifactId>
+    <artifactId>androspecter</artifactId>
     <version>0.1.27</version>
-    <name>Utils</name>
+    <name>AndroSpecter</name>
     <description>Useful classes and methods</description>
-    <url>https://github.com/JordanSamhi/Utils</url>
+    <url>https://github.com/JordanSamhi/AndroSpecter</url>
 
     <developers>
         <developer>
@@ -22,9 +22,9 @@
     </properties>
 
     <scm>
-        <connection>scm:git:https://github.com/JordanSamhi/Utils.git</connection>
-        <developerConnection>scm:git:git@github.com:JordanSamhi/Utils.git</developerConnection>
-        <url>https://github.com/JordanSamhi/Utils.git</url>
+        <connection>scm:git:https://github.com/JordanSamhi/AndroSpecter.git</connection>
+        <developerConnection>scm:git:git@github.com:JordanSamhi/AndroSpecter.git</developerConnection>
+        <url>https://github.com/JordanSamhi/AndroSpecter.git</url>
     </scm>
 
     <licenses>
