--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,7 @@
                                 </goals>
                                 <configuration>
                                     <keyname>${gpg.keyname}</keyname>
-                                    <passphraseServerId>${gpg.keyname}</passphraseServerId>
+                                    <passphraseServerId>gpg.passphrase.id</passphraseServerId>
                                 </configuration>
                             </execution>
                         </executions>
